@@ -1,9 +1,7 @@
 package es.upm.miw.mastermind;
 
-import es.upm.miw.utils.Console;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
@@ -16,18 +14,15 @@ public enum CodepegColor {
     PURPLE('p'),
     NULL_TOKEN(' ');
 
-    private char symbol;
-    private static final List<CodepegColor> VALUES = Collections.unmodifiableList(Arrays.asList(values()));
+    private final char symbol;
+    private static final List<CodepegColor> VALUES = List.of(values());
     private static final int SIZE = VALUES.size();
     private static final Random RANDOM = new Random();
 
-    private CodepegColor(char symbol){
+    CodepegColor(char symbol){
         this.symbol = symbol;
     }
 
-    static CodepegColor get(int position){
-        return CodepegColor.values()[position];
-    }
 
     public static CodepegColor randomColor()  {
         return VALUES.get(RANDOM.nextInt(SIZE));
@@ -58,10 +53,28 @@ public enum CodepegColor {
     }
 
     public static String validCodepegs(){
-        String result = "";
+        StringBuilder result = new StringBuilder();
         for(CodepegColor codepeg: VALUES){
-            result += (codepeg.symbol != NULL_TOKEN.symbol) ? codepeg.symbol : "";
+            result.append((codepeg.symbol != NULL_TOKEN.symbol) ? codepeg.symbol : "");
         }
-        return result;
+        return result.toString();
     }
+
+    private static CodepegColor toCodepeg(char symbol){
+        for(CodepegColor codepeg: VALUES){
+            if(codepeg.symbol == symbol){
+                return codepeg;
+            }
+        }
+        return NULL_TOKEN;
+    }
+
+    public static void set(CodepegColor[] codepegs, String attempts){
+        char symbol;
+        for(int i = 0; i < attempts.length(); i++){
+            symbol = attempts.charAt(i);
+            codepegs[i] = toCodepeg(symbol);
+        }
+    }
+
 }
